fixed logo alignment

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -35,6 +35,7 @@
     position: absolute
     top: 50vh
     left: 50vw
+    width: 4rem
     transform: translate(-50%, -50%)
     img
-        width: 4rem
+        width: 100%
